# windows-sandbox

./: Cargo.toml  run.ps1
sandbox/: Cargo.toml
sandbox/src/: daemon.rs  daemon32.rs  main.rs
sandbox_hooks/: Cargo.toml
sandbox_hooks/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
test/: secret.txt
