[package]
name = "shared"
version = "0.0.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctor = "0.6.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
]
